--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,36 +3,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/dashboardFragment">
+    app:startDestination="@id/loginFragment">
 
-  <fragment
-      android:id="@+id/loginFragment"
-      android:name="androidsamples.java.tictactoe.LoginFragment"
-      android:label="@string/login_fragment_label"
-      tools:layout="@layout/fragment_login">
-    <action
-        android:id="@+id/action_login_successful"
-        app:destination="@id/dashboardFragment" />
-  </fragment>
-  <fragment
-      android:id="@+id/gameFragment"
-      android:name="androidsamples.java.tictactoe.GameFragment"
-      android:label="@string/game_fragment_label"
-      tools:layout="@layout/fragment_game">
-    <argument
-        android:name="gameType"
-        app:argType="string" />
-  </fragment>
-  <fragment
-      android:id="@+id/dashboardFragment"
-      android:name="androidsamples.java.tictactoe.DashboardFragment"
-      android:label="@string/app_name"
-      tools:layout="@layout/fragment_dashboard">
-    <action
-        android:id="@+id/action_need_auth"
-        app:destination="@id/loginFragment" />
-    <action
-        android:id="@+id/action_game"
-        app:destination="@id/gameFragment" />
-  </fragment>
+    <!-- Login Fragment -->
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="androidsamples.java.tictactoe.LoginFragment"
+        android:label="@string/login_fragment_label"
+        tools:layout="@layout/fragment_login">
+
+        <!-- Action: Successful login -->
+        <action
+            android:id="@+id/action_login_successful"
+            app:destination="@id/dashboardFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <!-- Dashboard Fragment -->
+    <fragment
+        android:id="@+id/dashboardFragment"
+        android:name="androidsamples.java.tictactoe.DashboardFragment"
+        tools:layout="@layout/fragment_dashboard">
+
+        <!-- Action: Navigate to Login Fragment if not authenticated -->
+        <action
+            android:id="@+id/action_need_auth"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/dashboardFragment"
+            app:popUpToInclusive="true" />
+
+        <!-- Action: Navigate to Game Fragment -->
+        <action
+            android:id="@+id/action_game"
+            app:destination="@id/gameFragment" />
+    </fragment>
+
+    <!-- Game Fragment -->
+    <fragment
+        android:id="@+id/gameFragment"
+        android:name="androidsamples.java.tictactoe.GameFragment"
+        android:label="@string/game_fragment_label"
+        tools:layout="@layout/fragment_game">
+
+        <!-- Argument: Game type (Single-player or Two-player) -->
+        <argument
+            android:name="gameType"
+            app:argType="string" />
+    </fragment>
 </navigation>
