Partially Implemented Two Player Mode

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,5 +50,9 @@
         <argument
             android:name="gameType"
             app:argType="string" />
+        <argument
+            android:name="gameId"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 </navigation>
