--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".GameFragment">
 
+  <TextView
+      android:id="@+id/text_game_id"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="16dp"
+      android:text=""
+      android:textAppearance="?android:attr/textAppearanceMedium"
+      android:visibility="gone"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent" />
+
   <Button
       android:id="@+id/button0"
       android:layout_width="wrap_content"
